# python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codecov.yml  main.yml  publish.yml
mcp-auth/: MCPAuth.py  __init__.py
mcpauth/: __init__.py  __init__test.py  config.py  errors.py  exceptioins_test.py  exceptions.py  exceptions_test.py  types.py
mcpauth/auth/: authorization_server_handler.py  mcp_auth_handler.py  resource_server_handler.py  token_verifier.py
mcpauth/middleware/: create_bearer_auth.py
mcpauth/models/: __init__.py  auth_server.py  oauth.py
mcpauth/utils/: __init__.py  _bearer_www_authenticate_header.py  _create_resource_metadata_endpoint.py  _create_verify_jwt.py  _fetch_server_config.py  _transpile_resource_metadata.py  _validate_server_config.py  create_verify_jwt_test.py  fetch_server_config.py  fetch_server_config_test.py
samples/: README.md
samples/current/todo-manager/: server.py  service.py
samples/server/: README.md  fast_api.py  starlette.py  whoami.py
samples/server/todo-manager/: server.py
samples/v0_1_1/: whoami.py
tests/: __init__test.py  exceptions_test.py
tests/auth/: authorization_server_handler_test.py  resource_server_handler_test.py  token_verifier_test.py
tests/middleware/: create_bearer_auth_test.py
tests/utils/: _bearer_www_authenticate_header_test.py  _create_resource_metadata_endpoint_test.py  _transpile_resource_metadata_test.py  create_verify_jwt_test.py  fetch_server_config_test.py  validate_server_config_test.py
typings/aresponses/: __init__.pyi
(+1 files in other folders)
