[project]
name = "mcpauth"
version = "0.0.0"
description = "Connect your MCP server to any eligible OAuth 2 or OpenID Connect provider"
authors = [{ name = "Silverhand Inc.", email = "contact@silverhand.io" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
  "authentication",
  "authorization",
  "mcp",
  "oauth2",
  "openid-connect",
]
dependencies = [
  "aiohttp>=3.11.18",
  "pydantic>=2.11.3",
  "pyjwt[crypto]>=2.9.0",
  "starlette>=0.46.2",
]

[project.urls]
homepage = "https://mcp-auth.dev"
repository = "https://github.com/mcp-auth/python"
documentation = "https://mcp-auth.dev/docs"

[dependency-groups]
dev = [
  "aresponses>=3.0.0",
  "black>=24.8.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
]
